<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RTK BT MP Tool</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>

    <string name="HCIInterface">HCI Interface</string>
    <string name="DevNode">Device Node</string>
    <string name="ActionItem">Action Item</string>
    <!-- param1 -->
    <string name="RF_Channel">RF Channel</string>
    <string name="Pkt_Type">Packet Type</string>
    <string name="Payload_Type">Payload Type</string>
    <string name="Pkt_Count">Packet Count</string>
    <string name="Tx_Gain_Value">Tx Gain Value</string>
    <string name="Whitening_Value">Whitening Value</string>
    <!-- param2 -->
    <string name="Tx_Gain_Index">Tx Gain Index</string>
    <string name="Test_Mode">Test Mode</string>
    <string name="Tx_Dac">Tx Dac</string>
    <string name="Pkt_Header">Packet Header</string>
    <string name="Multi_Rx_Enable">Mulit Rx Enable</string>
    <!-- param3 -->
    <string name="Hopping_Fix_Channel">Hopping Fix Channel</string>
    <!-- hit target -->
    <string name="Hit_Target">Hit Target</string>
    <!-- tx gain table-->
    <string name="Tx_Gain_Table">Tx Gain Table</string>
    <string name="Tx_Gain_Table0">T0</string>
    <string name="Tx_Gain_Table1">T1</string>
    <string name="Tx_Gain_Table2">T2</string>
    <string name="Tx_Gain_Table3">T3</string>
    <string name="Tx_Gain_Table4">T4</string>
    <string name="Tx_Gain_Table5">T5</string>
    <string name="Tx_Gain_Table6">T6</string>
    <!-- tx dac table -->
    <string name="Tx_Dac_Table">Tx Dac Table</string>
    <string name="Tx_Dac_Table0">T0</string>
    <string name="Tx_Dac_Table1">T1</string>
    <string name="Tx_Dac_Table2">T2</string>
    <string name="Tx_Dac_Table3">T3</string>
    <string name="Tx_Dac_Table4">T4</string>
    <!-- rtl8761 xtal -->
    <string name="RTL8761_Xtal">RTL8761 Xtal</string>
    <!-- register ID -->
    <string name="Register_ID">Register ID</string>
    <string name="Reg_RW">Reg R/W</string>
    <string name="Reg_Page">Page</string>
    <string name="Reg_Addr">Addr</string>
    <string name="Reg_Msb">Msb</string>
    <string name="Reg_Lsb">Lsb</string>
    <string name="Reg_Data">Data</string>
    <!-- get thermal -->
    <string name="Get_Thermal">Get Thermal</string>
    <!-- get stage -->
    <string name="Get_Stage">Get Stage</string>
    <!-- rx report-->
    <string name="Rx_Rssi">Rx Rssi</string>
    <string name="Rx_Bits">Rx Bits</string>
    <string name="Rx_Err_Bits">Rx Err Bits</string>
    <string name="Rx_Pkt_Counts">Rx Pkt Counts</string>
    <!-- rx report-->
    <string name="Tx_Bits">Tx Bits</string>
    <string name="Tx_Pkt_Counts">Tx Pkt Counts</string>

    <string name="Start">Start</string>
    <string name="Stop">Stop</string>
    <string name="Send">Send</string>
    <string name="BER">BER</string>
    <string name="LE_Connect">LE Connect</string>
    <string name="Clear">Clear</string>
    <string name="Pause">Pause</string>
    <string name="Clear_Log">Clear Log</string>
    <string name="HCI_Reset">HCI Reset</string>

    <!-- hint string list  -->
    <string name="hint_Dev_Node">/dev/ttyS0</string>
    <string name="hint_Pkt_Count">xxxx</string>
    <string name="hint_Tx_Gain_Value">xx</string>
    <string name="hint_Whitening_Value">xx</string>
    <string name="hint_Tx_Dac">xx</string>
    <string name="hint_Pkt_Header">xxxx</string>
    <string name="hint_Multi_Rx_Enable">xx</string>
    <string name="hint_Hopping_Fix_Channel">xx</string>
    <string name="hint_Hit_Target">xxxxxx</string>
    <string name="hint_Tx_Gain_Table">xx</string>
    <string name="hint_Tx_Dac_Table">xx</string>
    <string name="hint_RTL8761_Xtal">xxxxxxxx</string>
    <string name="hint_Reg_Page">xx</string>
    <string name="hint_Reg_Addr">xx</string>
    <string name="hint_Reg_Msb">xx</string>
    <string name="hint_Reg_Lsb">xx</string>
    <string name="hint_Reg_Data">xxxxxxxx</string>
    <string name="hint_Get_Thermal">xx</string>
    <string name="hint_Get_Stage">xx</string>
    <string name="hint_Rx_Rssi">xx</string>
    <string name="hint_Rx_Bits">xxxx</string>
    <string name="hint_Rx_Err_Bits">xxxx</string>
    <string name="hint_Rx_Pkt_Counts">xxxx</string>
    <string name="hint_Tx_Bits">xxxx</string>
    <string name="hint_Tx_Pkt_Counts">xxxx</string>

    <!-- button bar menu -->
    <string name="NonLinkMode_menu">Non Link Mode</string>
    <string name="RegisterRW_menu">Register RW</string>
    <string name="Report_menu">Report</string>
    <string name="Others_menu">Others</string>
</resources>
