<?xml version="1.0" encoding="utf-8"?>

<TabWidget xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/buttonbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/NonLinkMode_tab"
        android:focusable="true"
        android:clickable="true"
        android:text="@string/NonLinkMode_menu"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:paddingTop="7dip"
        android:paddingBottom="2dip"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_marginLeft="-3dip"
        android:layout_marginRight="-3dip"
        android:layout_width="match_parent"
        android:layout_height="64dip" />

    <TextView
        android:id="@+id/RegisterRW_tab"
        android:focusable="true"
        android:clickable="true"
        android:text="@string/RegisterRW_menu"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:paddingTop="7dip"
        android:paddingBottom="2dip"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_marginLeft="-3dip"
        android:layout_marginRight="-3dip"
        android:layout_width="match_parent"
        android:layout_height="64dip" />

    <TextView
        android:id="@+id/Report_tab"
        android:focusable="true"
        android:clickable="true"
        android:text="@string/Report_menu"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:paddingTop="7dip"
        android:paddingBottom="2dip"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_marginLeft="-3dip"
        android:layout_marginRight="-3dip"
        android:layout_width="match_parent"
        android:layout_height="64dip" />

    <TextView
        android:id="@+id/Others_tab"
        android:focusable="true"
        android:clickable="true"
        android:text="@string/Others_menu"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:paddingTop="7dip"
        android:paddingBottom="2dip"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_marginLeft="-3dip"
        android:layout_marginRight="-3dip"
        android:layout_width="match_parent"
        android:layout_height="64dip" />

</TabWidget>

